-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature#0001177: CLI Reindexing - poller_reindex_hosts.php: allow filter on "host description"
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001140: CLI-Script to associate a graph template to a host
-feature#0001082: Mirror Graph Rename based on template function to work with Data Sources 
-feature#0000431: Add php-xml to requirements, verify required PHP extensions
-feature#0000284: Custom <path_rra> for each device
-feature: Paginate Treeview Dual Pane
-feature: Allow user to specify maximum graphs per page from Treeview Dual Pane
-feature: Allow Treeview Dual Pane to be filtered for graph titles
-feature: Allow the user to add or remove graph text from page for searching with the browser
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Fix compatibility issues for RRDTool 1.3
-feature: Make the tabs section work a little better with existing plugins
-feature: Add additional options to speed data query graph automation process
-feature: Add additional indexes to speed data query graph creation
-feature: Allow the cli reindexing of hosts to be limited to a single query
-feature: New cli command host_update_template to allow re-templating of hosts using an updated template
-feature: When reindexing hosts, allow a queryid to be specified
-feature: Add command line Database upgrade script
-feature: Add api call to associate graphs with their data sources
-feature: Move the notes field to bottom of page
-feature: New availability option "Ping or SNMP"